# test-first-mandatory-group-a

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.sonar-qube.yml
.github/workflows/: api-tests.yml  e2e-tests.yml  server-lint-and-test.yml  server-pytest.yml
client/: cypress.config.js  package-lock.json  package.json
client/cypress/e2e/: backend-fetch.cy.js  home.cy.js  random_person_data_generation.cy.js
client/js/: script.js
server/: .pylintrc  Dockerfile.dev  pyproject.toml
server/app/: db.py  main.py
server/app/assets/: addresses_sqlite.sql  person-names.json
server/app/models/: postal_code.py
server/app/repository/: repository.py
server/app/schemas/: postal_code.py
server/app/services/: address_service.py  cpr_service.py  name_service.py  person_service.py  persons_service.py  phone_service.py
server/reports/: bandit_report.json  radon_complexity.txt  radon_maintainability.txt
server/tests/: conftest.py
server/tests/models/: test_postal_code.py
server/tests/postman/: postman_collection.json  postman_environment.json
server/tests/requests/: test_main.py
server/tests/services/: test_address_service.py  test_cpr_service.py  test_name_service.py  test_person_service.py  test_persons_service.py  test_phone_service.py
