[project]
name = "server"
version = "0.1.0"
description = ""
packages = [{ include = "app" }]

requires-python = ">=3.13"
dependencies = [
    "fastapi (>=0.118.0,<0.119.0)",
    "uvicorn (>=0.37.0,<0.38.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4"
pytest-asyncio = "^1.2"
httpx = "^0.26"
pylint = "^4.0.1"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]